project and issue pages added

--- a/src/webui/src/assets/i18n/de.json
+++ b/src/webui/src/assets/i18n/de.json
@@ -1,4 +1,6 @@
 {
   "Dashboard" : "Dashboard",
-  "Project List" : "Project List"
+  "Project List" : "Project List",
+  "Yes": "Yes",
+  "No": "No"
 }
